# claw

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  SECURITY.md  dist-workspace.toml
.github/workflows/: release.yml
crates/claw/: Cargo.toml
crates/claw-cli/: Cargo.toml
crates/claw-cli/src/: config.rs  conflict_writer.rs  diff_render.rs  error.rs  ignore.rs  main.rs  output.rs  worktree.rs
crates/claw-cli/src/commands/: agent.rs  auth.rs  branch.rs  change.rs  checkout.rs  daemon.rs  diff.rs  git_export.rs  integrate.rs  intent.rs  log.rs  mod.rs  patch.rs  remote.rs  resolve.rs  ship.rs  show.rs  snapshot.rs  status.rs  sync.rs
crates/claw-core/: Cargo.toml  build.rs
crates/claw-core/src/: cof.rs  error.rs  hash.rs  id.rs  lib.rs  object.rs  proto_conv.rs
crates/claw-core/src/types/: blob.rs  capsule.rs  change.rs  conflict.rs  intent.rs  mod.rs  patch.rs  policy.rs  reflog.rs  revision.rs  snapshot.rs  tree.rs  workstream.rs
crates/claw-crypto/: Cargo.toml
crates/claw-crypto/src/: capsule.rs  encrypt.rs  error.rs  kdf.rs  keypair.rs  lib.rs  sign.rs  verify.rs
crates/claw-git/: Cargo.toml
crates/claw-git/src/: blob_convert.rs  commit_convert.rs  error.rs  exporter.rs  lib.rs  tree_convert.rs
crates/claw-merge/: Cargo.toml
crates/claw-merge/src/: ancestor.rs  collect.rs  emit.rs  error.rs  group.rs  lib.rs  rebase.rs  tree_build.rs
crates/claw-patch/: Cargo.toml
crates/claw-patch/src/: binary.rs  codec.rs  error.rs  json_tree.rs  lib.rs  registry.rs  text_line.rs
crates/claw-policy/: Cargo.toml
crates/claw-policy/src/: checks.rs  error.rs  evaluator.rs  lib.rs  visibility.rs
crates/claw-store/: Cargo.toml
crates/claw-store/src/: error.rs  head.rs  index.rs  layout.rs  lib.rs  lockfile.rs  loose.rs  pack.rs  reflog.rs  refs.rs  repo.rs  tree_diff.rs
crates/claw-sync/: Cargo.toml  build.rs
crates/claw-sync/src/: ancestry.rs  capsule_service.rs  change_service.rs  client.rs  error.rs  event_service.rs  http_client.rs  intent_service.rs  lib.rs  negotiation.rs  partial_clone.rs  server.rs  transport.rs  workstream_service.rs
crates/claw/src/: auth_store.rs  config.rs  diff_render.rs  ignore.rs  main.rs  merge_state.rs
crates/claw/src/commands/: auth.rs  git_export.rs  init.rs  integrate.rs  intent.rs  remote.rs  ship.rs  status.rs  sync.rs
crates/claw/wix/: main.wxs
proto/claw/: capsule.proto  objects.proto  sync.proto
tests/integration/: Cargo.toml  spec_tests.rs
