[package]
name = "claw-cli"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "claw"
path = "src/main.rs"

[dependencies]
claw-core = { workspace = true }
claw-store = { workspace = true }
claw-patch = { workspace = true }
claw-merge = { workspace = true }
claw-crypto = { workspace = true }
claw-policy = { workspace = true }
claw-sync = { workspace = true }
claw-git = { workspace = true }
tonic = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
hex = { workspace = true }
globset = { workspace = true }
similar = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
urlencoding = { workspace = true }
webbrowser = { workspace = true }
rand = { workspace = true }
